# jerry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs  config.toml  dev7prev.rs  registerDbg.cmd  registerRel.cmd  test.txt
.github/workflows/: clippy.yml
appx/: AppxManifest.xml
resources/: icon.icns  manifest.xml
src/: config.rs  func.rs  libconf.rs  libfunc.rs  liblists.rs  lists.rs  main.rs  model.rs
src/lib/: libfunc.rs  liblists.rs  liblistsalt.rs
