[package]
name = "jerry"
description = "stupid robot nuisance"
version = "0.4.0"
authors = ["Clover Johnson <cats11134@gmail.com>"]
license = "MIT"
repository = "https://github.com/callmeclover/jerry"
build = "build.rs"
edition = "2021"

[package.metadata.winres]
LegalCopyright = "Copyright © 2024"
FileDescription = "stupid robot nuisance"

[dependencies]
enigo = "0.2.0"
screenshots = "0.8.6"
tts = "0.26.0"
rand = "0.8.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
lazy_static = "1.4.0"
dialoguer = "0.11.0"
time = "0.3.31"
chrono = "0.4.31"
ansi_term = "0.12.1"
regex = "1.10.3"
rsautogui = "0.2.2"
reqwest = { version = "0.12.3", features = ["blocking"] }
cgisf_lib = "0.2.1"
ping = "0.5.2"

[dependencies.windows]
version = "0.56.0"
optional = true
features = [
	"Gaming_Input",
	"UI_Input_Preview_Injection",
]

[build-dependencies]
winres = "0.1"

[features]
invisibility = []
advanced = ["dep:windows"]
#microphone = []