[package]
name = "jerry"
description = "stupid robot nuisance"
version = "1.0.0"
authors = ["Clover Johnson <cats11134@gmail.com>"]
license = "MIT"
repository = "https://github.com/callmeclover/jerry"
build = "build.rs"
edition = "2021"

keywords = ["robot", "automation", "malware", "jerry"]
categories = ["robot", "automation", "malware"]

[package.metadata.winresource]
LegalCopyright = "Copyright © callmeclover 2024"
OriginalFilename = "stupid robot nuisance"

[dependencies]
enigo = {version = "0.2.1", features = ["x11rb"]}
screenshots = "0.8.6"
tts = { git = "https://github.com/Bear-03/tts-rs", branch = "synthesize" }
rodio = { version = "0.19.0", optional = true }
rand = "0.8.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
lazy_static = "1.4.0"
dialoguer = "0.11.0"
time = "0.3.31"
chrono = "0.4.31"
regex = "1.10.3"
reqwest = { version = "0.12.3", features = ["blocking"] }
cgisf_lib = "0.2.1"
ping = "0.5.2"
tracing = "0.1.40"
cached = { version = "0.51.3", features = ["async"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
optional = true
features = [
	"Gaming_Input",
	"UI_Input_Preview_Injection",
]

[target.'cfg(unix)'.dependencies.daemonize]
version = "0.5.0"
optional = true

[target.x86_64-apple-darwin.dependencies]
cocoa-foundation = "0.1.2"
objc = "0.2.7"

[build-dependencies]
winresource = "0.1"

[features]
invisibility = ["dep:daemonize"]
advanced = ["dep:windows"]
microphone = ["dep:rodio"]
